# tesseract_ignition

./: CMakeLists.txt  README.md  README.rst  package.xml  tesseract_ignition.rosinstall
.github/workflows/: main.yml
cmake/: tesseract_ignition-config.cmake.in
config/: scene3d.config  setup_wizard.config  visualization.config
gh_pages/: conf.py  index.rst
gh_pages/_static/: snapcraft_card.html
include/tesseract_ignition/: conversions.h  entity_manager.h  gui_events.h  render_utils.h  tesseract_ignition_visualization.h  utils.h
include/tesseract_ignition/grid/: TesseractGridConfig.qml  TesseractGridConfig.qrc  tesseract_grid_config.h
include/tesseract_ignition/load/: TesseractLoad.qml  TesseractLoad.qrc  TesseractLoadForm.ui.qml  TesseractLoadForm.ui.qmlc  tesseract_load.h
include/tesseract_ignition/load/bk/: TesseractLoad.qml  TesseractLoad.qrc
include/tesseract_ignition/recorder/: TesseractVideoRecorder.qml  TesseractVideoRecorder.qrc  tesseract_video_recorder.h
include/tesseract_ignition/scene3d/: TesseractScene3D.qrc  tesseract_scene3d.h
include/tesseract_ignition/setup_wizard/: AllowedCollisionEditor.qml  AllowedCollisionEditorForm.ui.qml  KinematicGroups.qml  KinematicGroupsForm.ui.qml  LoadSetupWizardFiles.qml  LoadSetupWizardFilesForm.ui.qml  TesseractSetupWizard.qml  TesseractSetupWizard.qrc  TesseractSetupWizardForm.ui.qml  UserDefinedJointStates.qml  UserDefinedJointStatesForm.ui.qml  tesseract_setup_wizard.h
include/tesseract_ignition/setup_wizard/models/: allowed_collision_matrix_model.h  joint_list_model.h  kinematic_groups_model.h  opw_kinematics_model.h  user_defined_joint_states_model.h  user_defined_tcp_model.h
include/tesseract_ignition/setup_wizard/qml/: AllowedCollisionEditor.qml  AllowedCollisionEditorForm.ui.qml  KinematicGroups.qml  KinematicGroupsForm.ui.qml  LoadSetupWizardFiles.qml  LoadSetupWizardFilesForm.ui.qml  OPWKinematicsDefinition.qml  OPWKinematicsDefinitionForm.ui.qml  UserDefinedJointStates.qml  UserDefinedJointStatesForm.ui.qml  UserDefinedToolCenterPoints.qml  UserDefinedToolCenterPointsForm.ui.qml
include/tesseract_ignition/tree/: TesseractEntityTree.qrc
snap/: snapcraft.yaml
snap/local/: ignition_snap.rosinstall
snap/plugins/: catkin.py
snapcraft/snap/: snapcraft.yaml
snapcraft/snap/local/: ignition_snap.rosinstall
snapcraft/snap/plugins/: tesseract_catkin_tools.py
src/: conversions.cpp  demo_dialog.cpp  demo_tesseract.cpp  demo_window.cpp  entity_manager.cpp  grid_config.cpp.autosave  render_utils.cpp  tesseract_ignition_visualization.cpp  tesseract_ignition_visualization_plugin.cpp  tesseract_load.cpp  tesseract_scene3d.cpp  tesseract_setup_wizard.cpp  tesseract_setup_wizard_app.cpp  tesseract_video_recorder.cpp  tesseract_visualization_app.cpp  utils.cpp
src/grid/: tesseract_grid_config.cpp
src/scene3d/: tesseract_scene3d.cpp
src/setup_wizard/: tesseract_setup_wizard.cpp
src/setup_wizard/models/: allowed_collision_matrix_model.cpp  joint_list_model.cpp  kinematic_groups_model.cpp  opw_kinematics_model.cpp  user_defined_joint_states_model.cpp  user_defined_tcp_model.cpp
