<?xml version="1.0"?>
<package format="2">
  <name>tesseract_ignition</name>
  <version>0.1.0</version>
  <description>The tesseract_ignition package</description>
  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <depend>tesseract_collision</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_visualization</depend>
  <depend>tesseract</depend>
  <depend>ignition_gui</depend>
  <depend>ignition_msgs</depend>
  <depend>ignition_rendering</depend>
  <depend>ignition_sensors</depend>
  <depend>class_loader</depend>

<!--  <depend>libignition-rendering3-dev</depend>
  <depend>libignition-math6-eigen3-dev</depend>
  <depend>libignition-common3-dev</depend>
  <depend>libignition-gui3-dev</depend>-->

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
